src/objects/Group_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Enrollment_Review_Date__c</fullName>
        <label>Annual Enrollment/Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Enroll_Pct__c</fullName>
        <label>Auto Enroll %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Auto_Escalate_Pct__c</fullName>
        <label>Auto Escalate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carrier_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier/Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Sub_Type__c</field>
                <operation>equals</operation>
                <value>Carrier/Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Group_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contributions__c</fullName>
        <label>Contributions</label>
        <picklist>
            <picklistValues>
                <fullName>Contributory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Contributory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonused Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crediting_Date__c</fullName>
        <label>Crediting Date</label>
        <picklist>
            <picklistValues>
                <fullName>Last business day of each payroll period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last business day of each plan year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last business day of each calendar quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last business day of each month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any business day on which salary deferrals are credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy premium due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Partners_Covered__c</fullName>
        <label>Domestic Partners Covered</label>
        <picklist>
            <picklistValues>
                <fullName>No Domestic Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opposite Sex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Sex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same and Opposite Sex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EE_Contribution__c</fullName>
        <label>EE Contribution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERISA_Plan_Number__c</fullName>
        <label>ERISA Plan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Contribution__c</fullName>
        <label>ER Contribution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Notes__c</fullName>
        <label>Eligibility Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Rule__c</fullName>
        <label>Eligibility Rule</label>
        <picklist>
            <picklistValues>
                <fullName>0 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: Date of Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of month following: 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Eligibility Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Match__c</fullName>
        <label>Employer Match</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <inlineHelpText>The Client Business the Plan is related to.</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Plans</relationshipLabel>
        <relationshipName>Group_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Type__c</fullName>
        <label>Insured Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Insured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Eligible_Employees__c</fullName>
        <label>Number Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Enrolled_Employees__c</fullName>
        <label>Number Enrolled Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Date__c</fullName>
        <label>Open Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Entry__c</fullName>
        <inlineHelpText>The timing of which a participant can get into the plan.</inlineHelpText>
        <label>Plan Entry</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Payroll Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Notes__c</fullName>
        <label>Plan Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Number__c</fullName>
        <label>Plan Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Sub_Type__c</fullName>
        <label>Plan Sub-Type</label>
        <picklist>
            <controllingField>Plan_Type__c</controllingField>
            <picklistValues>
                <fullName>10-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-year Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASD/Equity Split Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Fee for Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability (LTD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability (STD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endorsement Split Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPO (Exclusive Provider Organization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMO (Health Maintenance Organization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Involuntary Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS (Point of Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO (Preferred Provider Organization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term to Specified Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Benefit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>401(a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401(k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>457</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCP (Nonqualified 409A Deferred Compensation Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBP (Executive Bonus Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSA (Flexible Spending Account)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRA (Health Reimbursement Account)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA (Health Spending Account)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roth IRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERP (Nonqualified Supplemental Executive Retirement Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple IRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Management Record</label>
        <referenceTo>Potential_Revenue__c</referenceTo>
        <relationshipName>Group_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Group_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Type__c</fullName>
        <label>Producer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rabbi_Trust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to a Rabbi Trust Entity record.</inlineHelpText>
        <label>Rabbi Trust</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trust</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Plans (Rabbi Trust)</relationshipLabel>
        <relationshipName>Corporate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refunded_Money__c</fullName>
        <label>Refunded Money</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Plan_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The third-party administrator for the retirement plan.</inlineHelpText>
        <label>Retirement Plan Administrator</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Group_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safe_Harbor_Date__c</fullName>
        <label>Safe Harbor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Passed__c</fullName>
        <inlineHelpText>The employee passed testing.</inlineHelpText>
        <label>Testing Passed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <formula>Entity__r.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total employees, taken from the Employees field on the Client Business Entity.</inlineHelpText>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Corporate Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entity__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Carrier_Provider__c</columns>
        <columns>Plan_Number__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Corp Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Plans</pluralLabel>
    <recordTypes>
        <fullName>Executive_Benefits</fullName>
        <active>true</active>
        <description>Executive Benefits</description>
        <label>Executive Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Benefits</fullName>
        <active>true</active>
        <description>Group Benefits - Fully Insured and Self-Insured Plans</description>
        <label>Group Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirement_Plan</fullName>
        <active>true</active>
        <description>Retirement Plans, 401K</description>
        <label>Retirement Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>